--- a/Source/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.fsproj
+++ b/Source/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.fsproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net452</TargetFrameworks>
+		<TargetFrameworks>net452;net6.0-windows</TargetFrameworks>
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<WarnOn>3390;$(WarnOn)</WarnOn>
 	</PropertyGroup>
