--- a/NuGet/ExcelDna.Registration.VisualBasic/ExcelDna.Registration.VisualBasic.nuspec
+++ b/NuGet/ExcelDna.Registration.VisualBasic/ExcelDna.Registration.VisualBasic.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>ExcelDna.Registration.VisualBasic</id>
-        <version>1.5.1</version>
+        <version>1.6.0-preview2</version>
         <title>Excel-DNA Registration Extensions for Visual Basic</title>
         <authors>Govert van Drimmelen</authors>
         <owners>Govert van Drimmelen</owners>
@@ -16,14 +16,20 @@
         <tags>excel exceldna udf excel-dna</tags>
         <dependencies>
           <group targetFramework=".NETFramework4.5.2" >
-            <dependency id="ExcelDna.Integration" version="[1.5.1]" />
-            <dependency id="ExcelDna.Registration" version="[1.5.1]" />
+            <dependency id="ExcelDna.Integration" version="[1.6.0-preview2]" />
+            <dependency id="ExcelDna.Registration" version="[1.6.0-preview2]" />
             <dependency id="ExcelDna.Interop" version="14.0.0" />
+          </group>
+          <group targetFramework="net6.0-windows" >
+            <dependency id="ExcelDna.Integration" version="[1.6.0-preview2]" />
+            <dependency id="ExcelDna.Registration" version="[1.6.0-preview2]" />
           </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\ExcelDna.Registration.VisualBasic.dll" target="lib\net452\ExcelDna.Registration.VisualBasic.dll" />
-        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\ExcelDna.Registration.VisualBasic.pdb" target="lib\net452\ExcelDna.Registration.VisualBasic.pdb" />
+        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\net452\ExcelDna.Registration.VisualBasic.dll" target="lib\net452\ExcelDna.Registration.VisualBasic.dll" />
+        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\net452\ExcelDna.Registration.VisualBasic.pdb" target="lib\net452\ExcelDna.Registration.VisualBasic.pdb" />
+        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\net6.0-windows\ExcelDna.Registration.VisualBasic.dll" target="lib\net6.0-windows\ExcelDna.Registration.VisualBasic.dll" />
+        <file src="..\..\Source\ExcelDna.Registration.VisualBasic\bin\Release\net6.0-windows\ExcelDna.Registration.VisualBasic.pdb" target="lib\net6.0-windows\ExcelDna.Registration.VisualBasic.pdb" />
     </files>
 </package>
