--- a/NuGet/ExcelDna.Registration/ExcelDna.Registration.nuspec
+++ b/NuGet/ExcelDna.Registration/ExcelDna.Registration.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>ExcelDna.Registration</id>
-        <version>1.5.1</version>
+        <version>1.6.0-preview2</version>
         <title>Excel-DNA Registration Extensions</title>
         <authors>Govert van Drimmelen</authors>
         <owners>Govert van Drimmelen</owners>
@@ -15,12 +15,17 @@
         <tags>excel exceldna udf excel-dna</tags>
         <dependencies>
           <group targetFramework=".NETFramework4.5.2" >
-            <dependency id="ExcelDna.Integration" version="[1.5.1]" />
+            <dependency id="ExcelDna.Integration" version="[1.6.0-preview2]" />
+          </group>
+          <group targetFramework="net6.0-windows" >
+            <dependency id="ExcelDna.Integration" version="[1.6.0-preview2]" />
           </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="..\..\Source\ExcelDna.Registration\bin\Release\ExcelDna.Registration.dll" target="lib\net452\ExcelDna.Registration.dll" />
-        <file src="..\..\Source\ExcelDna.Registration\bin\Release\ExcelDna.Registration.pdb" target="lib\net452\ExcelDna.Registration.pdb" />
+        <file src="..\..\Source\ExcelDna.Registration\bin\Release\net452\ExcelDna.Registration.dll" target="lib\net452\ExcelDna.Registration.dll" />
+        <file src="..\..\Source\ExcelDna.Registration\bin\Release\net452\ExcelDna.Registration.pdb" target="lib\net452\ExcelDna.Registration.pdb" />
+        <file src="..\..\Source\ExcelDna.Registration\bin\Release\net6.0-windows\ExcelDna.Registration.dll" target="lib\net6.0-windows\ExcelDna.Registration.dll" />
+        <file src="..\..\Source\ExcelDna.Registration\bin\Release\net6.0-windows\ExcelDna.Registration.pdb" target="lib\net6.0-windows\ExcelDna.Registration.pdb" />
     </files>
 </package>
