--- a/Source/Samples/Registration.Sample/Registration.Sample.csproj
+++ b/Source/Samples/Registration.Sample/Registration.Sample.csproj
@@ -7,7 +7,8 @@
 		<AssemblyOriginatorKeyFile>..\..\assets\exceldna.snk</AssemblyOriginatorKeyFile>
 
 		<Version>1.1.0.0</Version>
-		<FileVersion>1.1.0.0</FileVersion>
+		<FileVersion>1.6.0.0</FileVersion>
+		<InformationalVersion>1.6.0</InformationalVersion>
 	</PropertyGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
@@ -20,8 +21,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ExcelDna.Integration" Version="1.6.0-preview2" />
-		<PackageReference Include="ExcelDna.AddIn" Version="1.6.0-preview2" />
+		<PackageReference Include="ExcelDna.Integration" Version="1.6.0-preview3" />
+		<PackageReference Include="ExcelDna.AddIn" Version="1.6.0-preview3" />
 	</ItemGroup>
 
 	<ItemGroup>
