--- a/Source/Samples/Registration.Sample.FSharp/Registration.Sample.FSharp.fsproj
+++ b/Source/Samples/Registration.Sample.FSharp/Registration.Sample.FSharp.fsproj
@@ -17,7 +17,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="FSharp.Core" Version="4.7.2" />
+		<PackageReference Update="FSharp.Core" Version="4.7.2" />
 		<PackageReference Include="System.ValueTuple" Version="4.3.0" />
 		<PackageReference Include="ExcelDna.Integration" Version="1.6.0-preview3" />
 		<PackageReference Include="ExcelDna.AddIn" Version="1.6.0-preview3" />
