--- a/NuGet/ExcelDna.Registration/ExcelDna.Registration.nuspec
+++ b/NuGet/ExcelDna.Registration/ExcelDna.Registration.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>ExcelDna.Registration</id>
-        <version>1.6.0-preview3</version>
+        <version>$ExcelDnaVersion$</version>
         <title>Excel-DNA Registration Extensions</title>
         <authors>Govert van Drimmelen</authors>
         <owners>Govert van Drimmelen</owners>
@@ -15,10 +15,10 @@
         <tags>excel exceldna udf excel-dna</tags>
         <dependencies>
           <group targetFramework=".NETFramework4.5.2" >
-            <dependency id="ExcelDna.Integration" version="[1.6.0-preview3]" />
+            <dependency id="ExcelDna.Integration" version="[$ExcelDnaVersion$]" />
           </group>
           <group targetFramework="net6.0-windows" >
-            <dependency id="ExcelDna.Integration" version="[1.6.0-preview3]" />
+            <dependency id="ExcelDna.Integration" version="[$ExcelDnaVersion$]" />
           </group>
         </dependencies>
     </metadata>
