--- a/Source/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.fsproj
+++ b/Source/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.fsproj
@@ -15,7 +15,7 @@
 
 	<ItemGroup>
 		<PackageReference Update="FSharp.Core" Version="4.7.2" />
-		<PackageReference Include="System.ValueTuple" Version="4.3.0" />
+		<PackageReference Update="System.ValueTuple" Version="4.3.0" />
 	</ItemGroup>
 
 	<ItemGroup>
