--- a/Source/Samples/Registration.Sample.FSharp/Registration.Sample.FSharp.fsproj
+++ b/Source/Samples/Registration.Sample.FSharp/Registration.Sample.FSharp.fsproj
@@ -18,7 +18,7 @@
 
 	<ItemGroup>
 		<PackageReference Update="FSharp.Core" Version="4.7.2" />
-		<PackageReference Include="System.ValueTuple" Version="4.3.0" />
+		<PackageReference Update="System.ValueTuple" Version="4.3.0" />
 		<PackageReference Include="ExcelDna.Integration" Version="1.6.0-preview3" />
 		<PackageReference Include="ExcelDna.AddIn" Version="1.6.0-preview3" />
 	</ItemGroup>
