Enabled Central Package Management.

--- a/Source/ExcelDna.Registration/ExcelDna.Registration.csproj
+++ b/Source/ExcelDna.Registration/ExcelDna.Registration.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ExcelDna.Integration" Version="1.6.0-preview3" />
+		<PackageReference Include="ExcelDna.Integration" />
 	</ItemGroup>
 
 </Project>
