--- a/Source/Samples/Registration.Sample.FSharp/Registration.Sample.FSharp.fsproj
+++ b/Source/Samples/Registration.Sample.FSharp/Registration.Sample.FSharp.fsproj
@@ -5,6 +5,7 @@
 		<GenerateDocumentationFile>true</GenerateDocumentationFile>
 		<WarnOn>3390;$(WarnOn)</WarnOn>
 		<EnableDynamicLoading>true</EnableDynamicLoading>
+		<ManagePackageVersionsCentrally>false</ManagePackageVersionsCentrally>
 	</PropertyGroup>
 
 	<ItemGroup>
