--- a/Source/Test/Registration.Test.csproj
+++ b/Source/Test/Registration.Test.csproj
@@ -12,9 +12,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ExcelDna.Integration" Version="1.6.0-preview3" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
-		<PackageReference Include="NUnit" Version="3.13.2" />
+		<PackageReference Include="ExcelDna.Integration" />
+		<PackageReference Include="NUnit3TestAdapter" VersionOverride="4.2.1" />
+		<PackageReference Include="NUnit" VersionOverride="3.13.2" />
 	</ItemGroup>
 
 	<ItemGroup>
