--- a/Source/ExcelDna.Registration.VisualBasic/ExcelDna.Registration.VisualBasic.vbproj
+++ b/Source/ExcelDna.Registration.VisualBasic/ExcelDna.Registration.VisualBasic.vbproj
@@ -11,11 +11,11 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="ExcelDna.Integration" Version="1.6.0-preview3" />
+		<PackageReference Include="ExcelDna.Integration" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net452' ">
-		<PackageReference Include="ExcelDna.Interop" Version="14.0.1" />
+		<PackageReference Include="ExcelDna.Interop" />
 	</ItemGroup>
 
 	<ItemGroup Condition=" '$(TargetFramework)' == 'net6.0-windows' ">
