--- a/NuGet/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.nuspec
+++ b/NuGet/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.nuspec
@@ -8,8 +8,8 @@
         <owners>Govert van Drimmelen</owners>
         <projectUrl>http://excel-dna.net</projectUrl>
         <repository type="git" url="https://github.com/Excel-DNA/Registration" />
-        <iconUrl>http://docs.excel-dna.net/NuGetIcon.png</iconUrl>
-        <requireLicenseAcceptance>false</requireLicenseAcceptance>
+		<icon>images\ExcelDna-nu.png</icon>
+		<requireLicenseAcceptance>false</requireLicenseAcceptance>
         <description>Excel-DNA Registration is an extension package for Excel-DNA, adding custom registration processing. 
         This package adds additional transformations appropriate to F# projects.</description>
         <summary>Excel-DNA Registration provides custom registration and function transformation helpers to Excel-DNA add-ins.</summary>
@@ -20,16 +20,17 @@
             <dependency id="ExcelDna.Registration" version="[$ExcelDnaVersion$]" />
             <dependency id="ExcelDna.Interop" version="14.0.0" />
           </group>
-          <group targetFramework="net6.0-windows" >
+          <group targetFramework="net6.0-windows7.0" >
             <dependency id="ExcelDna.Integration" version="[$ExcelDnaVersion$]" />
             <dependency id="ExcelDna.Registration" version="[$ExcelDnaVersion$]" />
           </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net452\ExcelDna.Registration.FSharp.dll" target="lib\net452\ExcelDna.Registration.FSharp.dll" />
-        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net452\ExcelDna.Registration.FSharp.pdb" target="lib\net452\ExcelDna.Registration.FSharp.pdb" />
-        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net6.0-windows\ExcelDna.Registration.FSharp.dll" target="lib\net6.0-windows\ExcelDna.Registration.FSharp.dll" />
-        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net6.0-windows\ExcelDna.Registration.FSharp.pdb" target="lib\net6.0-windows\ExcelDna.Registration.FSharp.pdb" />
-    </files>
+        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net452\ExcelDna.Registration.FSharp.dll" target="lib\net452\" />
+        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net452\ExcelDna.Registration.FSharp.pdb" target="lib\net452\" />
+        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net6.0-windows\ExcelDna.Registration.FSharp.dll" target="lib\net6.0-windows7.0\" />
+        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net6.0-windows\ExcelDna.Registration.FSharp.pdb" target="lib\net6.0-windows7.0\" />
+		<file src="..\..\..\ExcelDna\Package\images\ExcelDna-nu.png" target="images\" />
+	</files>
 </package>
