--- a/NuGet/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.nuspec
+++ b/NuGet/ExcelDna.Registration.FSharp/ExcelDna.Registration.FSharp.nuspec
@@ -11,27 +11,14 @@
         <icon>images\ExcelDna-nu.png</icon>
         <license type="expression">MIT</license>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
-        <description>Excel-DNA Registration is an extension package for Excel-DNA, adding custom registration processing. 
-        This package adds additional transformations appropriate to F# projects.</description>
+        <description>This NuGet package is deprecated.</description>
         <summary>Excel-DNA Registration provides custom registration and function transformation helpers to Excel-DNA add-ins.</summary>
         <tags>excel exceldna udf excel-dna</tags>
         <dependencies>
-          <group targetFramework=".NETFramework4.6.2" >
-            <dependency id="ExcelDna.Integration" version="[$ExcelDnaVersion$]" />
             <dependency id="ExcelDna.Registration" version="[$ExcelDnaVersion$]" />
-            <dependency id="ExcelDna.Interop" version="14.0.0" />
-          </group>
-          <group targetFramework="net6.0-windows7.0" >
-            <dependency id="ExcelDna.Integration" version="[$ExcelDnaVersion$]" />
-            <dependency id="ExcelDna.Registration" version="[$ExcelDnaVersion$]" />
-          </group>
         </dependencies>
     </metadata>
     <files>
-        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net462\ExcelDna.Registration.FSharp.dll" target="lib\net462\" />
-        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net462\ExcelDna.Registration.FSharp.pdb" target="lib\net462\" />
-        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net6.0-windows\ExcelDna.Registration.FSharp.dll" target="lib\net6.0-windows7.0\" />
-        <file src="..\..\Source\ExcelDna.Registration.FSharp\bin\Release\net6.0-windows\ExcelDna.Registration.FSharp.pdb" target="lib\net6.0-windows7.0\" />
-		<file src="..\..\..\ExcelDna\Package\images\ExcelDna-nu.png" target="images\" />
-	</files>
+        <file src="..\..\..\ExcelDna\Package\images\ExcelDna-nu.png" target="images\" />
+    </files>
 </package>
